# libmol

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  compile.bat  compile64.bat  makefile  mol.0.0.6.h
mol.0.0.6/: .icharmm.c.un~  .pdb.c.un~  Doxyfile  _atom_group_copy_from_deprecated.c  _atom_group_copy_from_deprecated.h  arithmetic_ansi.h  atom.c  atom.h  atom_group.c  atom_group.h  benergy.c  benergy.h  bond.c  bond.h  compare.c  compare.h  energy.c  energy.h  enums.h  gbsa.c  gbsa.h  hbond.c  hbond.h  hbond_probev2.gperf  hbond_probev2.h  icharmm.c  icharmm.h  init.c  init.h  io.c  io.h  json.c  json.h  lbfgs.c  lbfgs.h  matrix.c  matrix.h  mem.c  mem.h  minimize.c  (+43 more)
tests/: CMakeLists.txt  test_benergy.c  test_mol_atom.c  test_mol_pdb.c
